// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`About page > should render the page 1`] = `
<div>
  <div
    class="sc-gtsqUy qFqbA"
  >
    <main
      class="sc-bdnyFh cOrhoO"
    >
      <h1
        class="sc-gKAaef ljqyJc"
      >
        About Page
      </h1>
      <p
        class="sc-iCoHzw jGcKYw"
      >
        Get started by editing
        <code
          class="sc-jSFipO cMRfmt"
        >
          pages/about.tsx
        </code>
      </p>
      <div
        class="sc-dlniIP RElFz"
      >
        <div
          class="sc-hKFymg jUOIRL"
        >
          <a
            class="sc-eCAqax jVKTjr"
            href="/"
          >
            ← Go Back
          </a>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`About page > should render the page with restaurants 1`] = `
<div>
  <div
    class="sc-gtsqUy qFqbA"
  >
    <main
      class="sc-bdnyFh cOrhoO"
    >
      <h1
        class="sc-gKAaef ljqyJc"
      >
        About Page
      </h1>
      <p
        class="sc-iCoHzw jGcKYw"
      >
        Get started by editing
        <code
          class="sc-jSFipO cMRfmt"
        >
          pages/about.tsx
        </code>
      </p>
      <h1
        class="sc-gKAaef ljqyJc"
      >
        Tacos de Lyon
      </h1>
      <p
        class="sc-iCoHzw jGcKYw"
      >
        Tacos de Lyon, c’est l’histoire de deux amis d’enfance, passionnés de cuisine, qui ont décidé de se lancer dans l’aventure de la restauration. Leur objectif : faire découvrir la gastronomie lyonnaise à travers un plat emblématique de la ville : le tacos. Pour cela, ils ont imaginé une carte de tacos à base de produits frais et de qualité, avec des recettes originales et savoureuses. Le tout, dans une ambiance conviviale et chaleureuse.
      </p>
      <div
        class="sc-dlniIP RElFz"
      >
        <div
          class="sc-hKFymg jUOIRL"
        >
          <a
            class="sc-eCAqax jVKTjr"
            href="/"
          >
            ← Go Back
          </a>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`About page > should show 404 when restaurants are falsy 1`] = `
<div>
  <div>
    404
  </div>
</div>
`;
